--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -28,7 +28,6 @@
 #         run: npx cypress run
 
 
-
 name: Cypress Regression Tests
 
 on:
@@ -57,12 +56,25 @@ jobs:
         with:
           start: npm start  # Start the app
           wait-on: 'http://localhost:3000'  # Wait for the app to be ready
+          record: true  # Enables video recording (if configured)
 
-      - name: Save Cypress Test Reports
+      # Ensure Videos Are Uploaded (if available)
+      - name: Save Cypress Videos
+        if: always()  # Ensures this step runs even if the test fails
         uses: actions/upload-artifact@v2
         with:
-          name: cypress-test-results
+          name: cypress-videos
           path: cypress/videos/
+          if-no-files-found: ignore  # Prevents failure if no videos exist
+
+      # Ensure Screenshots Are Uploaded (Useful for Debugging)
+      - name: Save Cypress Screenshots
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots/
+          if-no-files-found: ignore
 
       - name: Notify on Failure
         if: failure()
