--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -27,7 +27,6 @@
 #       - name: Run Cypress tests
 #         run: npx cypress run
 
-
 name: Cypress Regression Tests
 
 on:
@@ -61,7 +60,7 @@ jobs:
       # Ensure Videos Are Uploaded (if available)
       - name: Save Cypress Videos
         if: always()  # Ensures this step runs even if the test fails
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # Updated version
         with:
           name: cypress-videos
           path: cypress/videos/
@@ -70,7 +69,7 @@ jobs:
       # Ensure Screenshots Are Uploaded (Useful for Debugging)
       - name: Save Cypress Screenshots
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # Updated version
         with:
           name: cypress-screenshots
           path: cypress/screenshots/
