--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -27,6 +27,9 @@
 #       - name: Run Cypress tests
 #         run: npx cypress run
 
+
+
+
 name: Cypress Regression Tests
 
 on:
@@ -40,10 +43,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Updated version
 
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4  # Updated version
         with:
           node-version: '18'
 
@@ -51,7 +54,7 @@ jobs:
         run: npm install
 
       - name: Run Cypress Tests
-        uses: cypress-io/github-action@v4
+        uses: cypress-io/github-action@v6  # Latest version
         with:
           start: npm start  # Start the app
           wait-on: 'http://localhost:3000'  # Wait for the app to be ready
@@ -60,7 +63,7 @@ jobs:
       # Ensure Videos Are Uploaded (if available)
       - name: Save Cypress Videos
         if: always()  # Ensures this step runs even if the test fails
-        uses: actions/upload-artifact@v3  # Updated version
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: cypress-videos
           path: cypress/videos/
@@ -69,7 +72,7 @@ jobs:
       # Ensure Screenshots Are Uploaded (Useful for Debugging)
       - name: Save Cypress Screenshots
         if: always()
-        uses: actions/upload-artifact@v3  # Updated version
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: cypress-screenshots
           path: cypress/screenshots/
